<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.iut.revuesonline.SaisieActivity">

    <EditText
        android:id="@+id/etref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_light"
        android:ems="7"
        android:hint="@string/ref" />

    <EditText
        android:id="@+id/ettit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etref"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/revue"/>

    <EditText
        android:id="@+id/etdes"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@+id/ettit"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="20"
        android:hint="@string/des"
        />

    <EditText
        android:id="@+id/etfrais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etdes"
        android:backgroundTint="@android:color/holo_orange_light"
        android:ems="7"
        android:hint="@string/monnaie"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etfrais"
        android:prompt="@string/periode_prompt"
        android:spinnerMode="dialog"
        />

    <Button
        android:id="@+id/bAdd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_orange_light"
        android:text="@string/add"
        android:onClick="buttonClicked"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/holo_orange_light"
        android:textStyle="bold" />


</RelativeLayout>
